--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "react-test-renderer": "^16.1.1"
   }
 }
